Extracted hideable its your decision content into its own component. wrapping it all in a card component. This solves the component height flickering when shwoing and hiding

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -16,6 +16,6 @@ body {
   color: #fff;
 }
 
-.spacer {
-  //margin-bottom: 400px;
+.test-choices {
+  min-height: 300px;
 }
